--- a/wsfrontend/templates/base_templates/config_base.html
+++ b/wsfrontend/templates/base_templates/config_base.html
@@ -1,4 +1,4 @@
-{% extends "base_templates/tag_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
+{% extends "base_templates/admin_tag_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 {% block tagmain %}
 <section class="section">
   <div class="container">
