--- a/wsfrontend/templates/base_templates/page_base.html
+++ b/wsfrontend/templates/base_templates/page_base.html
@@ -1,1 +1,47 @@
 {% extends "base_templates/base.html" %}
+
+{% block logo %}
+<a class="navbar-item" href="{{ url_for('dashboard.home_page') }}"><h4>plotsensor</h4></a>
+
+<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+  <span aria-hidden="true"></span>
+  <span aria-hidden="true"></span>
+  <span aria-hidden="true"></span>
+</a>
+{% endblock  %}
+
+{% block menucontent %}
+<div class="navbar-end">
+  <div class="navbar-item">
+    <a class="button" href="/admin/">Admin</a>
+  </div>
+  {% if userobj %}
+  <div class="navbar-item">
+    <div id="usermenu" class="dropdown">
+      <div class="dropdown-trigger">
+        <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+          <span>{{ userobj.userinfo.given_name }}</span>
+          <span class="icon is-small">
+            <i class="fas fa-angle-down" aria-hidden="true"></i>
+          </span>
+        </button>
+      </div>
+      <div class="dropdown-menu" id="dropdown-menu" role="menu">
+        <div class="dropdown-content">
+          <a href="{{ url_for('dashboard.currentuser') }}" class="dropdown-item">
+            User Page
+          </a>
+          <a href="{{ url_for('dashboard.signout') }}" class="dropdown-item">
+            Sign out
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+{% else %}
+<div class="navbar-item">
+  <a class="button" onclick="signin()">Sign in</a>
+</div>
+{% endif %}
+</div>
+{% endblock %}
