--- a/wsfrontend/templates/base_templates/tag_base.html
+++ b/wsfrontend/templates/base_templates/tag_base.html
@@ -1,8 +1,10 @@
 {% extends "base_templates/base.html" %}
 
-{% block breadcrumbs %}
-<div class="buttons has-addons is-centered" style="display:flex;justify-content:flex-start;flex-wrap:nowrap">
-  <a id="serialbutton" class="button is-rounded" href="{{ url_for('tagview.box', serial=box.serial ) }}">@{{ box.serial }}</a>
+{% block subnav %}
+<section class="section">
+  <div class="container">
+    <div class="buttons has-addons is-centered" style="display:flex;justify-content:flex-start;flex-wrap:nowrap">
+  <a id="serialbutton" class="button is-rounded" href="{{ url_for('tagview.tag', serial=tag.serial ) }}">@{{ tag.serial }}</a>
   <div id="locationtags" class="button is-rounded" style="flex-grow:1; justify-content: flex-start;overflow:hidden;">
     <div class="tags">
       <span class="tag is-link">One</span>
@@ -11,4 +13,7 @@
     </div>
   </div>
 </div>
+  </div>
+</section>
+
 {% endblock %}
