--- a/wsfrontend/templates/pages/admin/tag/tag_captures_page.html
+++ b/wsfrontend/templates/pages/admin/tag/tag_captures_page.html
@@ -1,4 +1,4 @@
-{% extends "base_templates/tag_base.html" %}  {# base_templates/tag_base.html extends base_templates/base.html #}
+{% extends "base_templates/admin_tag_base.html" %}  {# base_templates/tag_base.html extends base_templates/base.html #}
 {% set tag_active_page = "tagcaptures" %}
 
 {% block tagmain %}
@@ -16,7 +16,7 @@
             {% for capture in capturelist %}
             <tr>
               <td>
-                  <a href="{{ url_for('dashboard.capture_page', captid=capture.id) }}">{{ capture['id'] }}</a>
+                  <a href="{{ url_for('adminbp.capture_page', captid=capture.id) }}">{{ capture['id'] }}</a>
               </td>
               <td>{{ capture['scanned_by_user'] }}</td>
               <td>{{ capture['timestamp'] }}</td>
