--- a/wsfrontend/templates/pages/admin/tag/tag_list_page.html
+++ b/wsfrontend/templates/pages/admin/tag/tag_list_page.html
@@ -1,30 +1,13 @@
-{% extends "base_templates/page_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
+{% extends "base_templates/admin_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 {% set active_page = "admintags" %}
 {% block title %}
-Home
+List of Tags
 {% endblock %}
 {% block subtitle %}
-
 {% endblock %}
 
 {% block main %}
-<section class="section">
-    <div class="container">
-          {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            <ul class=flashes>
-            {% for message in messages %}
-              <li>{{ message }}</li>
-            {% endfor %}
-            </ul>
-          {% endif %}
-        {% endwith %}
-    </div>
-</section>
-
-
-<section class="section">
-    <div class="container">
+ <div class="container">
         <form method="POST" action="">
             {{ form.csrf_token }}
             {{ form.serial.label }} {{ form.serial(size=8) }}
@@ -35,8 +18,6 @@ Home
         <input type="submit" value="Go">
         </form>
     </div>
-</section>
-
 <section class="section">
     <div class="container">
         <table class="table">
@@ -55,7 +36,7 @@ Home
             {% for tag in taglist %}
             <tr>
               <td>
-                  <a href="{{ url_for('dashboard.tag_page', tagid=tag.id) }}">{{ tag.id }}</a>
+                  <a href="{{ url_for('adminbp.tag_page', tagid=tag.id) }}">{{ tag.id }}</a>
               </td>
               <td>{{ tag['serial'] }}</td>
               <td>{{ tag['secretkey'] }}</td>
