--- a/wsfrontend/templates/pages/admin/tag/tag_tagviews_page.html
+++ b/wsfrontend/templates/pages/admin/tag/tag_tagviews_page.html
@@ -1,4 +1,4 @@
-{% extends "base_templates/tag_base.html" %}  {# base_templates/tag_base.html extends base_templates/base.html #}
+{% extends "base_templates/admin_tag_base.html" %}  {# base_templates/tag_base.html extends base_templates/base.html #}
 {% set tag_active_page = "tagviews" %}
 
 {% block tagmain %}
