--- a/wsfrontend/templates/pages/admin/user/user_list_page.html
+++ b/wsfrontend/templates/pages/admin/user/user_list_page.html
@@ -1,28 +1,14 @@
-{% extends "base_templates/page_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
+{% extends "base_templates/admin_base.html" %}
 {% set active_page = "adminusers" %}
 
 {% block title %}
-Home
+List of Users
 {% endblock %}
 {% block subtitle %}
 
 {% endblock %}
 
 {% block main %}
-    <section class="section">
-        <div class="container">
-            {% with messages = get_flashed_messages() %}
-              {% if messages %}
-                <ul class=flashes>
-                {% for message in messages %}
-                  <li>{{ message }}</li>
-                {% endfor %}
-                </ul>
-              {% endif %}
-            {% endwith %}
-        </div>
-    </section>
-
     <section class="section">
         <div class="container">
             <table class="table">
@@ -37,7 +23,7 @@ Home
                 {% for user in userlist %}
                 <tr>
                       <td>
-                          <a href="{{ url_for('dashboard.user_page', userid=user.id) }}">{{ user.id }}</a>
+                          <a href="{{ url_for('adminbp.user_page', userid=user.id) }}">{{ user.id }}</a>
                       </td>
                     <td>{{ user.oauth_id }}</td>
                     <td>{{ user.timeregistered }}</td>
