--- a/wsfrontend/templates/pages/admin/user/user_page.html
+++ b/wsfrontend/templates/pages/admin/user/user_page.html
@@ -1,4 +1,4 @@
-{% extends "base_templates/page_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
+{% extends "base_templates/admin_base.html" %}
 {% set active_page = active_page|default('adminusers') -%}
 
 {% block title %}
