Added a battery plot page.
Reorganised the jinja templates.

--- a/wsfrontend/templates/base_templates/admin_base.html
+++ b/wsfrontend/templates/base_templates/admin_base.html
@@ -55,3 +55,13 @@
   </div>
 </section>
 {% endblock %}
+
+{% block main %}
+<section class="section">
+        <div class="container">
+            <h3>{% block title %}{% endblock %}</h3>
+        </div>
+        {% block adminmain %}
+        {% endblock %}
+  </section>
+{% endblock %}
