--- a/wsfrontend/templates/pages/admin/signin_page.html
+++ b/wsfrontend/templates/pages/admin/signin_page.html
@@ -9,7 +9,7 @@ Sign in
 {% block subnav %}
 {% endblock %}
 
-{% block main %}
+{% block adminmain %}
 
 <section class="section">
     <div class="container">
