--- a/wsfrontend/templates/pages/admin/tag/tag_list_page.html
+++ b/wsfrontend/templates/pages/admin/tag/tag_list_page.html
@@ -6,7 +6,7 @@ List of Tags
 {% block subtitle %}
 {% endblock %}
 
-{% block main %}
+{% block adminmain %}
  <div class="container">
         <form method="POST" action="">
             {{ form.csrf_token }}
