--- a/wsfrontend/templates/base_templates/admin_tag_base.html
+++ b/wsfrontend/templates/base_templates/admin_tag_base.html
@@ -13,7 +13,7 @@ Tag {{ tag.id }}
 {% endblock %}
 {% block subtitle %}{% endblock %}
 
-{% block main %}
+{% block adminmain %}
 {% block tagnav %}
     <div class="container">
         <div class="tabs">
