--- a/wsfrontend/templates/base_templates/plot.html
+++ b/wsfrontend/templates/base_templates/plot.html
@@ -1,5 +1,9 @@
 {% extends "base_templates/tag_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 
+{% block subpage %}
+Timeline
+{% endblock %}
+
 {% block headerscripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.23/moment-timezone-with-data-2012-2022.min.js"></script>
