--- a/wsfrontend/templates/pages/admin/user/user_list_page.html
+++ b/wsfrontend/templates/pages/admin/user/user_list_page.html
@@ -8,7 +8,7 @@ List of Users
 
 {% endblock %}
 
-{% block main %}
+{% block adminmain %}
     <section class="section">
         <div class="container">
             <table class="table">
