--- a/wsfrontend/templates/pages/admin/user/user_page.html
+++ b/wsfrontend/templates/pages/admin/user/user_page.html
@@ -8,7 +8,7 @@
 
 {% endblock %}
 
-{% block main %}
+{% block adminmain %}
 <section class="section">
     <div class="container">
         <h6>User {{user.id}}</h6>
