--- a/wsfrontend/templates/pages/capture/status_page.html
+++ b/wsfrontend/templates/pages/capture/status_page.html
@@ -1,7 +1,7 @@
 {% extends "base_templates/page_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 
 {% block breadcrumbs %}
-<li><a href="{{ url_for('tagview.box', serial=capture.boxserial ) }}">Box {{ capture.boxserial }}</a></li>
+<li><a href="{{ url_for('tagview.box', serial=capture.tagserial ) }}">Box {{ capture.tagserial }}</a></li>
 {% endblock %}
 
 {% block title %}
@@ -12,15 +12,19 @@ Capture {{ capture.id }}
 {% endblock %}
 
 {% block main %}
-<div class="tabs">
-<ul>
-  <li><a href="{{ url_for('captureview.temp', captid=capture.id) }}">Temperature</a></li>
-  <li><a href="{{ url_for('captureview.rh', captid=capture.id) }}">Humidity</a></li>
-  <li class="is-active"><a href="{{ url_for('captureview.status', captid=capture.id) }}">Status</a></li>
-</ul>
+<div class="container">
+  <div class="tabs">
+  <ul>
+    <li><a href="{{ url_for('captureview.temp', captid=capture.id) }}">Temperature</a></li>
+    <li><a href="{{ url_for('captureview.rh', captid=capture.id) }}">Humidity</a></li>
+    <li class="is-active"><a href="{{ url_for('captureview.status', captid=capture.id) }}">Status</a></li>
+  </ul>
+  </div>
 </div>
 
-<table class="table">
+<section class="section">
+  <div class="container">
+    <table class="table">
     <tbody>
       <tr>
         <td>Status</td>
@@ -52,5 +56,9 @@ Capture {{ capture.id }}
       </tr>
     </tbody>
   </table>
+  </div>
+</section>
+
+
 
 {% endblock %}
