--- a/wsfrontend/templates/pages/tag/tag_page.html
+++ b/wsfrontend/templates/pages/tag/tag_page.html
@@ -60,27 +60,26 @@
 {% endblock %}
 
 {% block main %}
-<section class="section">
-  <div id="lastscan" class="container">
-      <p>Last scan at </p>
-  </div>
-</section>
-
+<div class="container">
+  <div id="lastscan"><p>Last scan at </p></div>
+</div>
 <section class="section">
   <div class="container">
-
     <div class="tile is-ancestor">
       <div class="tile is-6 is-vertical is-parent">
-        <div class="tile is-child tag" id="temptile">
+        <div class="tile is-child box" id="temptile">
           <div class="innertile">
             <span class="icon is-large temperature is-pulled-right">
               <i class="fas fa-thermometer-half fa-3x"></i>
             </span>
-            <p class="title">Temperature</p>
-            <p class="subtitle">{{ latestsample.temp|round(2) }} °C</p>
+            <span class="is-pulled-left">
+              <p class="title">Temperature</p>
+              <p class="subtitle">{{ latestsample.temp|round(2) }} °C</p>
+            </span>
+
           </div>
         </div>
-        <div class="tile is-child tag" id="rhtile">
+        <div class="tile is-child box" id="rhtile">
           <div class="innertile">
             <span class="icon is-large rh is-pulled-right">
               <i class="fas fa-tint fa-3x"></i>
@@ -91,19 +90,23 @@
         </div>
       </div>
       <div class="tile is-6 is-vertical is-parent">
-        <div class="tile is-child tag">
+        <div class="tile is-child box">
+          <a href="{{ url_for('tagview.battery', serial=tag.serial) }}">
           <span class="icon is-large battery is-pulled-right">
             <i class="fas fa-battery-full fa-3x"></i>
           </span>
           <p class="title">Battery</p>
-          <p class="subtitle">{{ latestcapture.batvoltagemv }} mV</p>
+            <p class="subtitle">{{ latestcapture.batvoltagemv|int() }} mV</p></a>
         </div>
-        <div class="tile is-child tag">
-          {#<p>Scanned {{ tag.captures|length }} times</p>#}
+
+
+        <div class="tile is-child box">
+
         </div>
       </div>
     </div>
-  </div>
+</div>
 </section>
+
 
 {% endblock %}
