--- a/wsfrontend/templates/errors/404.html
+++ b/wsfrontend/templates/errors/404.html
@@ -1,8 +1,11 @@
 {% extends "base_templates/page_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 
 {% block main %}
-
-<h1>Error {{code}}</h1>
-<p>{{ desc }}</p>
+<section class="section">
+    <div class="container">
+        <h1>Error {{code}}</h1>
+        <p>{{ desc }}</p>
+    </div>
+</section>
 
 {% endblock %}
