--- a/wsfrontend/templates/pages/capture/plot_page.html
+++ b/wsfrontend/templates/pages/capture/plot_page.html
@@ -1,7 +1,7 @@
 {% extends "base_templates/tag_plot_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 
-{% block breadcrumbs %}
-<li><a href="{{ url_for('tagview.box', serial=capture.boxserial ) }}">{{ capture.boxserial }}</a></li>
+{% block subpage %}
+Capture {{ capture.id }}
 {% endblock %}
 
 {% block title %}
