Added favicon and updated wsapiwrapper.

--- a/wsfrontend/templates/base_templates/base.html
+++ b/wsfrontend/templates/base_templates/base.html
@@ -6,9 +6,10 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>plotsensor</title>
+  <title>cupl</title>
   <meta name="description" content="">
   <meta name="author" content="Malcolm Mackay">
+  <link rel="icon" href="{{ url_for('dashboard.static', filename='img/favicon.ico') }}">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
