--- a/wsfrontend/templates/pages/admin/tag/sim_page.html
+++ b/wsfrontend/templates/pages/admin/tag/sim_page.html
@@ -1,8 +1,13 @@
 {% extends "base_templates/admin_tag_base.html" %}
+{% import 'base_templates/config_macros.html' as cfg %}
 {% set tag_active_page = "tagsimulate" %}
 {% block tagmain %}
 
 <section class="section">
+  <div class="container">
+    {{ cfg.trhradio() }}
+    {{ cfg.smplinterval() }}
+  </div>
   <div class="container">
     <code style="word-wrap: break-word">
       <a href="{{simstr}}">{{simstr}}</a>
