--- a/wsfrontend/templates/pages/admin/capture/capture_list_page.html
+++ b/wsfrontend/templates/pages/admin/capture/capture_list_page.html
@@ -5,7 +5,7 @@
 List of Captures
 {% endblock %}
 
-{% block main %}
+{% block adminmain %}
 <section class="section">
     <div class="container">
         <table class="table">
@@ -15,6 +15,7 @@ List of Captures
               <th>Parent Tag</th>
               <th>Scanned by</th>
               <th>Timestamp</th>
+              <th></th>
             </tr>
             </thead>
             <tbody>
@@ -28,6 +29,7 @@ List of Captures
               </td>
               <td>{{ capture['scanned_by_user'] }}</td>
               <td>{{ capture['timestamp'] }}</td>
+              <td><a href="{{ url_for('adminbp.delete_capture', captid=capture.id, next=request.url) }}">Delete</a></td>
             </tr>
             {% endfor %}
             </tbody>
