--- a/wsfrontend/templates/pages/admin/tag/configserial_page.html
+++ b/wsfrontend/templates/pages/admin/tag/configserial_page.html
@@ -31,6 +31,7 @@
       {{ cfg.secretkey(tag) }}
       {{ cfg.trhradio() }}
       {{ cfg.smplinterval() }}
+      {{ cfg.minbatvoltagemv() }}
       {{ cfg.configtext() }}
       <button id="btnConnect" type="button" disabled>Write via Serial</button>
     </div>
