Removed simulate.js and other files. Compatible with cuplbackend 0.0.3

--- a/wsfrontend/templates/pages/admin/capture/capture_list_page.html
+++ b/wsfrontend/templates/pages/admin/capture/capture_list_page.html
@@ -22,7 +22,7 @@ List of Captures
             {% for capture in capturelist %}
             <tr>
               <td>
-                  <a href="{{ url_for('adminbp.capture_page', captid=capture.id) }}">{{ capture['id'] }}</a>
+                  <a href="{{ url_for('captureview.capture', captid=capture.id) }}">{{ capture['id'] }}</a>
               </td>
               <td>
                   <a href="{{ url_for('adminbp.tag_page', tagid=capture.parent_tag) }}">{{ capture['parent_tag'] }}</a>
