--- a/wsfrontend/templates/pages/tag/tag_page.html
+++ b/wsfrontend/templates/pages/tag/tag_page.html
@@ -29,16 +29,10 @@
   }
 
   function makeWrapperAnchor(sensor, tileid, range) {
-    var sensoranchor = document.createElement('a');
     var sensorurl = makeCalUrl(sensor, range);
     var sensortile = document.getElementById(tileid);
-    var tileinner = sensortile.getElementsByClassName('innertile')[0];
+    sensortile.getElementsByTagName('a')[0].setAttribute('href', sensorurl);
 
-    sensoranchor.style.display = 'block';
-    sensoranchor.setAttribute('href', sensorurl);
-    sensoranchor.appendChild(tileinner);
-
-    sensortile.appendChild(sensoranchor);
   }
 
 
@@ -68,25 +62,23 @@
 
 
         <div class="tile is-child box" id="temptile">
-          <div class="innertile">
-            <span class="icon is-large temperature is-pulled-right">
-              <i class="fas fa-thermometer-half fa-3x"></i>
-            </span>
-            <span class="is-pulled-left">
-              <p class="title">Temperature</p>
-              <p class="subtitle">{{ latestsample.temp|round(2) }} °C</p>
-            </span>
-          </div>
+            <a href="#">
+                <span class="icon is-large temperature is-pulled-right">
+                <i class="fas fa-thermometer-half fa-3x"></i>
+                </span>
+                <p class="title">Temperature</p>
+                <p class="subtitle">{{ latestsample.temp|round(2) }} °C</p>
+            </a>
         </div>
 
         <div class="tile is-child box" id="rhtile">
-          <div class="innertile">
-            <span class="icon is-large rh is-pulled-right">
-              <i class="fas fa-tint fa-3x"></i>
-            </span>
-            <p class="title">Relative Humidity</p>
-            <p class="subtitle">{{ latestsample.rh|round(2) }} %</p>
-          </div>
+            <a href="#">
+                <span class="icon is-large rh is-pulled-right">
+                  <i class="fas fa-tint fa-3x"></i>
+                </span>
+                <p class="title">Relative Humidity</p>
+                <p class="subtitle">{{ latestsample.rh|round(2) }} %</p>
+            </a>
         </div>
       </div>
 
