--- a/wsfrontend/templates/pages/consumer/tag/tag_page.html
+++ b/wsfrontend/templates/pages/consumer/tag/tag_page.html
@@ -52,9 +52,11 @@
 {% endblock %}
 
 {% block main %}
-<div class="container">
-  <div id="lastscan"><p>Last scan at </p></div>
-</div>
+<section class="section">
+    <div class="container">
+      <div id="lastscan"><p>Last scan at </p></div>
+    </div>
+</section>
 <section class="section">
   <div class="container">
     <div class="tile is-ancestor">
