--- a/wsfrontend/templates/base_templates/base.html
+++ b/wsfrontend/templates/base_templates/base.html
@@ -22,7 +22,7 @@
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
   <script type="text/javascript">
   document.addEventListener('DOMContentLoaded', () => {
     // Get all "navbar-burger" elements
