--- a/wsfrontend/templates/base_templates/tag_plot_base.html
+++ b/wsfrontend/templates/base_templates/tag_plot_base.html
@@ -1,6 +1,6 @@
 {% extends "base_templates/tag_base.html" %}
 
-{% block headerscripts %}
+{% block tagpagescripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
 <script>
