--- a/wsfrontend/templates/pages/consumer/tag/confignfc_page.html
+++ b/wsfrontend/templates/pages/consumer/tag/confignfc_page.html
@@ -1,7 +1,7 @@
 {% extends "base_templates/tag_base.html" %}
 {% import 'base_templates/config_macros.html' as cfg %}
 
-{% block headerscripts %}
+{% block tagpagescripts %}
 <script src="{{ url_for('dashboard.static', filename='confignfc.js') }}" defer></script>
 {% endblock %}
 
