--- a/wsfrontend/templates/base_templates/plot.html
+++ b/wsfrontend/templates/base_templates/plot.html
@@ -4,7 +4,7 @@
 Timeline
 {% endblock %}
 
-{% block headerscripts %}
+{% block tagpagescripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.23/moment-timezone-with-data-2012-2022.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
