--- a/wsfrontend/templates/pages/admin/signin_page.html
+++ b/wsfrontend/templates/pages/admin/signin_page.html
@@ -15,9 +15,21 @@ Sign in
     <div class="container">
         <form method="POST" action="">
             {{ form.csrf_token }}
-            {{ form.client_id.label }} {{ form.client_id(size=25) }}
-            {{ form.client_secret.label }} {{ form.client_secret(size=25) }}
-        <input type="submit" value="Go">
+            <div class="field">
+                <div class="control">
+                    {{ form.client_id.label(class_='label') }} {{ form.client_id(size=25, class_='input') }}
+                </div>
+            </div>
+                <div class="field">
+                <div class="control">
+                    {{ form.client_secret.label(class_='label') }} {{ form.client_secret(size=25, class_='input') }}
+                </div>
+            </div>
+            <div class="field">
+              <div class="control">
+                <input class="button is-link" type="submit", value="Go"></input>
+              </div>
+            </div>
         </form>
     </div>
 </section>
