--- a/wsfrontend/templates/pages/consumer/tag/tag_page.html
+++ b/wsfrontend/templates/pages/consumer/tag/tag_page.html
@@ -1,6 +1,6 @@
 {% extends "base_templates/tag_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 
-{% block headerscripts %}
+{% block tagpagescripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.js"></script>
 
 <script type="text/javascript">
