Starred and recent tags now have a star displayed beside them.

--- a/wsfrontend/templates/pages/home_page.html
+++ b/wsfrontend/templates/pages/home_page.html
@@ -9,9 +9,5 @@
 {% endblock %}
 
 {% block main %}
-<section class="section">
-    <div id="starredrecentlists" class="container">
-    </div>
-</section>
-
+<div id="starredrecentlists"></div>
 {% endblock %}
