--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -171,4 +171,7 @@ a {
   display: inline-block;
 }
 
+td {
+  white-space: nowrap;
+}
 .item:first-child { font-size: 150%; padding-right: 0.5em; }
