Using context and localstorage
To store and change temperature units.

--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -163,6 +163,12 @@ a {
   color:#1EAEDB;
 }
 
+
+
+.select.bluearrow:after {
+  border-color: #1EAEDB !important;
+}
+
 .flex {
   display: flex;
   align-items: baseline;
