--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -22,6 +22,10 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
   h6 { font-size: 1.5rem; }
 }
 
+html {
+  overflow-x: auto;
+}
+
 p {
   margin-top: 0; }
 
